modificada classe para ser mais modular e performática