@@ -1,5 +1,6 @@
 package projeto;
 
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -7,23 +8,18 @@ import java.util.stream.Collectors;
 
 public class PlataformaStreaming{
     private String nome;
-    private Map<String, Serie> series = new HashMap<String, Serie>();
-    private Map<String, Filme> filmes = new HashMap<String, Filme>();
-    private Map<String, Cliente> clientes = new HashMap<String, Cliente>();;
+    private Map<String, Midia> midias = new HashMap<>();
+    private Map<String, Cliente> clientes = new HashMap<>();;
     private Cliente clienteAtual;
 
-	public void adicionarSerie(Serie serie) {
-		series.put(serie.getNome(), serie);
+	public void adicionarMidia(Midia midia) {
+		midias.put(midia.getNome(), midia);
 	}
 
 	public void adicionarCliente(Cliente cliente) {
 		clientes.put(cliente.getNome(), cliente);
 	}
 
-	public void adicionarFilme(Filme filme) {
-        filmes.put(filme.getNome(), filme);
-	}
-	
 	public String getNome() {
 		return nome;
 	}
@@ -36,16 +32,12 @@ public class PlataformaStreaming{
 		return clienteAtual;
 	}
 
-	public Map<String, Serie> getSeries(){
-		return series;
+	public List<Midia> getMidias(){
+		return new ArrayList<>(midias.values());
 	}
 
-	public void setSeries (final HashMap<String, Serie> series){
-		this.series = series;
-	}
-
-	public Map<String, Cliente> getClientes(){
-		return clientes;
+	public List<Cliente> getClientes(){
+		return new ArrayList<>(clientes.values());
 	}
 
 	public void setClientes (final HashMap<String, Cliente> clientes){
@@ -53,7 +45,7 @@ public class PlataformaStreaming{
 	}
 
 	public boolean login(final String nomeUsuario, final String senha){
-		clienteAtual = clientes.values().stream()
+		clienteAtual = clientes.values().parallelStream()
 		.filter(c -> c.login(nomeUsuario, senha))
 		.findFirst()
 		.orElse(null);
@@ -64,19 +56,24 @@ public class PlataformaStreaming{
 		return clienteAtual != null;
 	}
 
-	public List<Serie> filtrarPorGenero(String genero) {
-		return series.values().stream()
-		.filter(serie -> serie.getGenero().toString().equals(genero)).collect(Collectors.toList());
+	public List<Midia> filtrarPorGenero(String genero) {
+		return midias.values().parallelStream()
+		.filter(midia -> midia.getGenero().toString().equals(genero))
+		.toList();
 	}
 
 	public List<Serie> filtrarPorQtdEpisodios(int nEpisodios) {
-		return series.values().stream()
-		.filter(serie -> serie.getQuantidadeDeEpisodios() == nEpisodios).collect(Collectors.toList());
+		return midias.values().parallelStream()
+		.filter(Serie.class::isInstance)
+		.map(Serie.class::cast)
+		.filter(serie -> serie.getQuantidadeDeEpisodios() == nEpisodios)
+		.toList();
 	}
 
-	public List<Serie> filtrarPorIdioma(String idioma) {
-		return series.values().stream()
-		.filter(serie -> serie.getIdioma().toString().equals(idioma)).collect(Collectors.toList());
+	public List<Midia> filtrarPorIdioma(String idioma) {
+		return midias.values().parallelStream()
+		.filter(serie -> serie.getIdioma().toString().equals(idioma))
+		.toList();
 	}
 
 	public void registrarAudiencia(Serie serie) {
@@ -84,39 +81,41 @@ public class PlataformaStreaming{
 	}
 
 	public String salvarSeries() {
-		return series.values().stream()
-		.map(Serie::salvar)
+		return midias.values().parallelStream()
+		.filter(Serie.class::isInstance)
+		.map(Midia::salvar)
 		.collect(Collectors.joining("\n"));
 	}
 
 	public String salvarFilmes() {
-		return filmes.values().stream()
-		.map(Filme::salvar)
+		return midias.values().parallelStream()
+		.filter(Filme.class::isInstance)
+		.map(Midia::salvar)
 		.collect(Collectors.joining("\n"));
 	}
 
 	public String salvarClientes() {
-		return clientes.values().stream()
+		return clientes.values().parallelStream()
 			.map(Cliente::salvar)
 			.collect(Collectors.joining("\n"));
 	}
 
 	public void carregarSeries(List<String> linhascsv) {
-		linhascsv.stream().forEach(linha -> {
+		linhascsv.parallelStream().forEach(linha -> {
 			Serie serie = Serie.carregar(linha);
-			series.put(serie.getNome(), serie);
+			midias.put(serie.getNome(), serie);
 		});
 	}
 
 	public void carregarFilmes(List<String> linhascsv) {
-		linhascsv.stream().forEach(linha -> {
+		linhascsv.parallelStream().forEach(linha -> {
 			Filme filme = Filme.carregar(linha);
-			filmes.put(filme.getNome(), filme);
+			midias.put(filme.getNome(), filme);
 		});
 	}
 
 	public void carregarClientes(List<String> linhascsv) {
-		linhascsv.stream().forEach(linha -> {
+		linhascsv.parallelStream().forEach(linha -> {
 			Cliente cliente = Cliente.carregar(linha);
 			clientes.put(cliente.getNome(), cliente);
 		});
